idk whats going on

--- a/_posts/2025-03-14-Football.md
+++ b/_posts/2025-03-14-Football.md
@@ -67,3 +67,5 @@ cleaned_df.to_csv('post2data.csv', index = False)
 # EDA Highlights
 I wanted to see the mean of the home team points. I also graphed the different scores by frequency so I can visually see the scores that happen the most. 
 - The mean home team score was 30.08910891089109.
+- The variance is 257.5741096497709
+- The mean of week 1 was 29.965174 compared to the mean of week 15 55.0000
