--- a/_posts/2025-03-14-Football.md
+++ b/_posts/2025-03-14-Football.md
@@ -16,6 +16,7 @@ I am interested in finding out how the home field advantage affects the scoring 
 I configured a data frame that shows what conference a team is in, how many points they scored, if the game was a conference game, and a few other things. 
 To do this I used the following steps:
 - Obtained an API key from the College Football Data website.
+- The website allows students to scrape their data up to 1,000 times per month. 
 - Used Python's requests library to make API calls and retrieve data on games, teams, and player statistics.
 - Processed the raw data to remove unnecessary columns and rows, handle missing values, and ensure consistency.
 - Combined data from multiple endpoints to create a comprehensive dataset for analysis.
@@ -69,3 +70,12 @@ I wanted to see the mean of the home team points. I also graphed the different s
 - The mean home team score was 30.08910891089109.
 - The variance is 257.5741096497709
 - The mean of week 1 was 29.965174 compared to the mean of week 15 55.0000
+
+
+
+# Conclusion
+- The home team scores more points than the away team according to this data.
+- The home team gets better as the season goes on and scores more at home the deeper in the season. 
+- The reason for the higher scores later in the season is not clear, but the data points to the opponents defenses being weaker or more figured out. 
+- From an outside perspective, teams get to know their playbook better as the year goes on and chemistry between offensive skills players increases as well. There is not a numerical way to track this data, however we can make these assumptions and hope to find data that can back this. 
+
