--- a/_posts/2025-03-14-Football.md
+++ b/_posts/2025-03-14-Football.md
@@ -11,7 +11,7 @@ College football is what makes fall a great time of year. I love Saturdays durin
 
 # _My Interest_
 I am interested in finding out how the home field advantage affects the scoring of a home team, so I will be looking at the total points the home teams score in there games.
-
+![Score Board](assets/images/scoreboard.jpg)
 ## _My Data_
 I configured a data frame that shows what conference a team is in, how many points they scored, if the game was a conference game, and a few other things. 
 To do this I used the following steps:
@@ -71,11 +71,9 @@ I wanted to see the mean of the home team points. I also graphed the different s
 - The variance is 257.5741096497709
 - The mean of week 1 was 29.965174 compared to the mean of week 15 55.0000
 
-
-
 # Conclusion
 - The home team scores more points than the away team according to this data.
 - The home team gets better as the season goes on and scores more at home the deeper in the season. 
 - The reason for the higher scores later in the season is not clear, but the data points to the opponents defenses being weaker or more figured out. 
 - From an outside perspective, teams get to know their playbook better as the year goes on and chemistry between offensive skills players increases as well. There is not a numerical way to track this data, however we can make these assumptions and hope to find data that can back this. 
-
+![CFP Trophy](assets/images/trophy.jpg)
