real final edit

--- a/_posts/2025-03-14-Football.md
+++ b/_posts/2025-03-14-Football.md
@@ -3,7 +3,7 @@ layout: post
 title:  "College Football Home Team Points"
 author: JD Gardner
 description: Do home teams score a lot of points?   
-image: "/assets/images/cover.jpg"
+image: "/assets/images/ncaa.jpg"
 ---
 
 # _College Football Home Field Advantage_
